# lzma-archiver

./: pyproject.toml  test.txt  test.txt.lzma
archiver/: core.py
lzma-archiver-main/: .gitignore  archiver.py  test.txt.lzma
lzma-archiver-main/archiver/: __init__.py  cli.py  core.py
lzma-archiver-main/archiver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_basic.py
